# image_classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Elluri_KarlStorz_Presentation.pptx  README.md  docker-compose.yml  prometheus.local.yml  prometheus.yml  pyproject.toml  streamlit_app.py
scripts/: download_model.py
src/: __init__.py
src/api/: dependencies.py  endpoints.py  main.py  schemas.py
src/classifier/: classifier.py
src/core/: config.py  exceptions.py  middleware.py  monitoring.py
src/img_classifier/: classifier.py
src/services/: __init__.py  api.py  inference.py  monitoring.py
src/ui/: components.py  pages.py  styles.py
src/utils/: preprocessing.py  visualization.py
src/web/: app.py
tests/: conftest.py
tests/integration/: test_endpoints.py  test_monitoring_integration.py
tests/unit/: test_classifier.py  test_preprocessing.py
